Fixed overflow on remaining pages

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
   margin:0;
 }
 
+/* body{overflow-x:hidden;} */
+
+.overflow-hide{
+  overflow: hidden;
+}
+
 /* ----------------------Universal Syles + Utility Classes----------------------*/
 /* Padding + Margin--------------*/
 .padded-sm {padding: 2.5%;}
